--- a/assets/css/lib/slider.less
+++ b/assets/css/lib/slider.less
@@ -1,86 +1,62 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	slider start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.slider-holder{
+.carousel-holder{
 	width: 100%;
 	padding-bottom: 56.25%;
 	position: relative;
 	background: transparent;
 	overflow: hidden;
-	ul.slider{
+	& > .carousel{
 		width: 100%;
 		height: 100%;
 		position: absolute;
-		transition: all .5s @easing;
-		overflow: hidden;
-		li{
-			display: block;
+		top: 0;
+		left: 0;
+		.slide{
+			width: 100%;
 			height: 100%;
-			float: left;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			z-index: 1;
+			background: @grey;
+			border: 5px solid @black;
+			box-sizing: border-box;
+			transform: translateX(0);
+			transition: all .2s @easing;
+			visibility: hidden;
 			overflow: hidden;
-			figure{
-				display: block;
-				width: 100%;
-				height: 100%;
-				margin: 0 auto;
-				background: @white;
-				overflow: hidden;
-				img{
-					width: auto;
-					height: 100%;
-					margin: 0 auto;
-				}
+			&.right{
+				left: auto;
+				right: -100%;
+			}
+			&.left{
+				right: auto;
+				left: -100%;
+			}
+			&.active{
+				z-index: 2;
+				left: 0;
+				right: 0;
+			}
+			&.right,
+			&.left,
+			&.active{
+				visibility: visible;
 			}
 		}
 	}
-	& > .arrow{
-		display: block;
-		width: 30px;
-		height: 30px;
+	.arrow{
 		position: absolute;
-		top: 50%;
+		bottom: 5px;
 		left: 0;
-		z-index: 10;
-		margin-top: -15px;
-		color: @black;
-		cursor: pointer;
-		transition: all .5s @easing;
-		transform: translateX(-100%);
-		visibility: hidden;
-		overflow: hidden;
-		&.arrow-right{
+		z-index: 5;
+		&.right{
 			left: auto;
 			right: 0;
-			transform: translateX(100%);
 		}
-		&:before{
-			display: block;
-			text-align: center;
-			line-height: 30px;
-		}
-		&:hover{
-			color: @green;
-		}
-	}
-	&:hover{
-		.arrow{
-			transform: translateX(0%);
-			visibility: visible;
-		}
-	}
-	& > .counter-holder{
-		display: inline-block;
-		position: absolute;
-		left: 50%;
-		bottom: 5px;
-		z-index: 10;
-		padding: 0 5px;
-		line-height: 20px;
-		color: lighten(@black, 50%);
-		background: fade(@grey, 50%);
-		font-size: .75em;
-		transform: translateX(-50%);
-		overflow: hidden;
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
