--- a/assets/css/lib/slider.less
+++ b/assets/css/lib/slider.less
@@ -1,61 +1,98 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	slider start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.carousel-holder{
-	width: 100%;
-	padding-bottom: 56.25%;
-	position: relative;
-	background: transparent;
-	overflow: hidden;
-	& > .carousel{
+#content-info-holder{
+	.carousel-holder{
 		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		.slide{
+		padding-bottom: 56.25%;
+		position: relative;
+		transition: none;
+		box-sizing: border-box;
+		background: transparent;
+		overflow: hidden;
+		& > .carousel{
 			width: 100%;
 			height: 100%;
 			position: absolute;
-			top: 0;
+			overflow: hidden;
+			&.animate{
+				will-change: transform;
+				transition: all .5s @easing;
+			}
+			.slide{
+				width: 100%;
+				height: 100%;
+				float: left;
+				position: relative;
+				background: transparent;
+				box-sizing: border-box;
+				overflow: hidden;
+			}
+		}
+		.arrow{
+			display: block;
+			width: 40px;
+			height: 40px;
+			position: absolute;
+			top: 50%;
 			left: 0;
-			right: 0;
-			z-index: 1;
+			z-index: 5;
+			margin-top: -20px;
+			opacity: 0;
+			font-size: 1.125em;
+			text-align: center;
 			background: @grey;
-			border: 5px solid @black;
-			box-sizing: border-box;
-			transform: translateX(0);
-			transition: all .2s @easing;
-			visibility: hidden;
+			color: @white;
+			transition: all .5s @easing;
 			overflow: hidden;
 			&.right{
 				left: auto;
-				right: -100%;
-			}
-			&.left{
-				right: auto;
-				left: -100%;
-			}
-			&.active{
-				z-index: 2;
-				left: 0;
 				right: 0;
 			}
-			&.right,
-			&.left,
-			&.active{
-				visibility: visible;
+			&:before{
+				display: block;
+				line-height: 40px;
+			}
+			&:hover{
+				background: @green;
 			}
 		}
-	}
-	.arrow{
-		position: absolute;
-		bottom: 5px;
-		left: 0;
-		z-index: 5;
-		&.right{
-			left: auto;
-			right: 0;
+		.dots-holder{
+			width: 100%;
+			height: 20px;
+			position: absolute;
+			left: 0;
+			bottom: 10px;
+			text-align: center;
+			overflow: hidden;
+			.dot{
+				display: inline-block;
+				width: 10px;
+				height: 10px;
+				border-radius: 50%;
+				line-height: 20px;
+				background: @grey;
+				cursor: pointer;
+				opacity: 0;
+				transition: all .5s @easing;
+				overflow: hidden;
+				&:hover,
+				&.active{
+					background: @green;
+				}
+			}
+		}
+		&:hover{
+			.arrow,
+			.dot{
+				opacity: 1;
+			}
+		}
+		&.no-nav{
+			.arrow,
+			.dots-holder{
+				display: none;
+			}
 		}
 	}
 }
