--- a/assets/css/lib/grid.less
+++ b/assets/css/lib/grid.less
@@ -10,7 +10,7 @@
 		box-sizing: border-box;
 		position: relative;
 		overflow: hidden;
-		&:nth-child(2){ margin: 0 20px; }
+		&:nth-child(2){ margin: 0 2.157497303128371%; }
 		figure{
 			width: 40%;
 			height: auto;
@@ -40,3 +40,43 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	grid end								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+	
+	.grid{
+		.row{ margin-bottom: 20px; }
+		.col{
+			h2{
+				min-height: 60px;
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end									  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 680px){
+	
+	.grid{
+		.row{ margin-bottom: 20px; }
+		.col{
+			width: 100%;
+			float: none;
+			margin-bottom: 20px;
+			&:nth-child(2){ margin: 0; }
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 end									  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
