--- a/assets/css/contacts.less
+++ b/assets/css/contacts.less
@@ -109,3 +109,73 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout end								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+
+	#content-info-holder{
+		.grid{
+			.col{
+				width: 100%;
+				float: none;
+				margin-left: 0;
+				margin-bottom: 40px;
+				&:first-child{ margin-left: 0; }
+				h2{
+					text-align: left;
+					padding: 20px 0;
+				}
+				.sprtr-h,
+				.icon{
+					display: none;
+				}
+				.item{
+					width: 100%;
+					margin-bottom: 0;
+					text-align: left;
+					p{
+						font-size: 1.125em;
+						text-align: left;
+						padding: 0;
+						line-height: 40px;
+					}
+					a{ line-height: 40px; }
+				}
+			}
+			&.staff-holder{
+				.col{
+					margin-bottom: 20px;
+					.role{
+						text-align: left;
+						margin-bottom: 20px;
+					}
+					ul > li{
+						display: block;
+						width: 100%;
+						text-align: left;
+						margin-bottom: 10px;
+						a{
+							display: inline-block;
+							vertical-align: middle;
+							font-size: 1.125em;
+						}
+						span{
+							display: inline-block;
+							vertical-align: middle;
+							text-align: left;
+							font-size: 1.5em;
+							padding: 0 10px 0 0;
+							overflow: hidden;
+						}
+					}
+				}
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end									  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
