--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -1,7 +1,7 @@
 @import "lib/common.less";
 @import "lib/forms.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout start							  					*/
+/*	layout start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .outer{
 	& > .inner{
@@ -13,11 +13,11 @@
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout end								  				*/
+/*	layout end								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	intro start								 				 */
+/*	intro start								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .outer.intro-holder{
 	width: 100%;
@@ -219,7 +219,7 @@
 	top: 0;
 	left: 0;
 	z-index: 20;
-	background: fade(@white, 90%);
+	background: fade(@black, 90%);
 	opacity: 0;
 	visibility: hidden;
 	overflow: hidden;
@@ -233,7 +233,6 @@
 		-webkit-overflow-scrolling: touch;
 		opacity: 0;
 		transition: all .25s @easing;
-		border: 2px solid @green;
 		box-sizing: border-box;
 		overflow: hidden;
 		& > iframe{
@@ -254,7 +253,7 @@
 		top: 20px;
 		right: 20px;
 		cursor: pointer;
-		color: @black;
+		color: @white;
 		font-size: 2em;
 		transition: all .5s @easing;
 		&:hover{
@@ -372,4 +371,152 @@
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	questions end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 1024px){
+
+	.outer.intro-holder{
+		& > .inner{
+			.entitled{
+				margin: 0 auto;
+				float: none;
+			}
+		}
+	}
+
+	.outer.project-holder{
+		p{
+			padding: 0 20px 20px;
+		}
+		.benefits-holder{
+			padding: 0 20px;
+			box-sizing: border-box;
+			li{
+				.inner{
+					.sprtr-h{
+						margin: 40px auto 20px;
+					}
+				}
+			}
+		}
+	}
+	#watch-movie{ width: 100%; }
+
+	.outer.suppliers-holder{
+		.suppliers li{
+			width: 100px;
+		}
+	}
+
+	.outer.questions-holder{
+		.questions{
+			li{
+				width: 100%;
+				float: none;
+				margin-bottom: 40px;
+				text-align: center;
+			}
+			p{ padding: 0 80px; }
+			a{ margin: 20px 0 0 0; }
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	intro 1024 end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+
+	.outer.project-holder{
+		h2{
+			padding: 0 20px;
+		}
+		p{
+			padding: 0 40px 20px;
+		}
+		.benefits-holder{
+			display: none;
+		}
+	}
+
+	.outer.project-holder{
+		.inner{
+			margin-top: 40px;
+		}
+	}
+	
+	#watch-movie{
+		margin: 40px auto 60px;
+		span{ font-size: 1.25em; }
+		span.hr-play{
+			font-size: 2em;
+			&:before{ margin-top: 4px; }
+		}
+	}
+
+	.outer.suppliers-holder{
+		.suppliers{
+			padding: 0 40px;
+			box-sizing: border-box;
+			li{
+				display: inline-block;
+				vertical-align: middle;
+				width: 16%;
+				padding: 10px;
+				margin: 0;
+				height: auto;
+				position: relative;
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end 								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 680px){
+	
+	.outer.intro-holder{
+		display: none;
+	}
+
+	#watch-movie{
+		margin: 40px auto 60px;
+		span{
+			font-size: 1.125em; 
+		}
+		span.text{ padding-left: 0; }
+		span.hr-play{
+			font-size: 1.5em;
+			&:before{ margin-top: 9px; }
+		}
+	}
+
+	#movie-holder{
+		& > .inner{
+			width: 100%;
+			height: 0;
+			padding-bottom: 56.25%;
+			position: absolute;
+			top: 50%;
+			left: 0%;
+			transform: translateX(0%) translateY(-50%);
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 end 								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
