--- a/assets/css/lib/common.less
+++ b/assets/css/lib/common.less
@@ -188,7 +188,7 @@ a{ text-decoration: none; }
 					}
 					a{
 						font-size: .875em;
-						color: @white;
+						color: @green;
 					}
 					&:first-child span{ font-size: .875em; }
 				}
@@ -205,20 +205,23 @@ a{ text-decoration: none; }
 		.btn-large.square{
 			float: right;
 			a{
-				background: @white;
+				background: transparent;
 				border: none;
 				line-height: 20px;
 				font-size: .875em;
 				font-weight: normal;
-				color: @black;
+				color: @green;
 				text-transform: none;
+				border: 2px solid @green;
+				box-sizing: border-box;
 				&:before{
 					display: block;
 					font-size: 1.25em;
-					margin: 13px 0 3px;
+					margin: 11px 0 3px;
 				}
 				&:hover{
-					color: @green;
+					color: @white;
+					background: @green;
 				}
 			}
 		}
@@ -231,6 +234,26 @@ a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	menu start								  				*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+#toggle-menu{
+	display: none;
+	width: 100%;
+	height: 40px;
+	position: relative;
+	background: @green;
+	overflow: hidden;
+	& > span{
+		display: block;
+		width: 100%;
+		height: 40px;
+		line-height: 40px;
+		font-size: 1em;
+		font-weight: 500;
+		text-transform: uppercase;
+		cursor: pointer;
+		color: @white;
+		overflow: hidden;
+	}
+}
 #menu-holder{
 	width: 100%;
 	height: 60px;
@@ -261,6 +284,7 @@ a{ text-decoration: none; }
 				text-transform: uppercase;
 				font-weight: 500;
 				color: @white;
+				transition: all .5s @easing;
 				&:before{
 					display: block;
 					width: 100%;
@@ -562,4 +586,161 @@ a{ text-decoration: none; }
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	footer end								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 1024px){
+
+	#header{
+		position: relative;
+		& > .inner{
+			padding-top: 20px;
+			position: relative;
+			overflow: visible;
+			.logo{
+				width: 110px;
+				height: 100px;
+				position: absolute;
+				top: 0;
+				left: 10px;
+				background: @white;
+				border: none;
+				img{
+					width: 90px;
+					height: auto;
+					margin: 18px auto 0;
+				}
+			}
+		}
+		.info-holder{
+			display: block;
+			width: 100%;
+			height: 60px;
+			padding: 0 20px 0 140px;
+			margin: 0 0 20px;
+			float: left;
+		}
+	}
+	
+	#toggle-menu{
+		display: block;
+	}
+
+	#menu-holder{
+		width: 100%;
+		height: 0;
+		position: absolute;
+		top: 140px;
+		left: 0;
+		z-index: 10;
+		background: fade(@black, 90%);
+		transition: all .5s @easing;
+		overflow: hidden;
+		.menu{
+			width: 100%;
+			padding: 0;
+			box-sizing: border-box;
+			backface-visibility: hidden;
+			overflow: hidden;
+			li{
+				width: 100%;
+				float: none;
+				position: relative;
+				text-align: center;
+				a:before{ display: none; }
+				&:hover,
+				&.active{
+					a{ color: @green; }
+				}
+			}
+		}
+		&.active{ height: 360px; }
+	}
+
+	#content > .outer.inside{
+		width: 100%;
+		max-width: 1200px;
+		margin: 20px auto 40px;
+		overflow: hidden;
+		&.private{
+			margin: 0 auto;
+		}
+	}
+
+	#navigation-holder{
+		width: 100%;
+		height: auto;
+		float: none;
+		border: none;
+		padding: 0 40px;
+		box-sizing: border-box;
+		overflow: hidden;
+		ul{
+			margin: 20px 0;
+			border-left: 2px solid @green;
+			box-sizing: border-box;
+			text-align: left;
+		}
+		li{
+			a{
+				display: inline-block;
+				vertical-align: top;
+				width: auto;
+				padding: 5px 20px;
+			}
+		}
+	}
+
+	#content-info-holder{
+		width: 100%;
+		float: none;
+		margin-left: 0;
+		margin-top: 20px;
+		padding: 0 40px;
+		box-sizing: border-box;
+	}
+
+	.pre-footer{ display: none; }
+	#footer{
+		padding: 0 20px;
+		box-sizing: border-box;
+		.logo{
+			width: 200px;
+			margin-top: 24px;
+		}
+		.developers{
+			width: 160px;
+			p{ display: none; }
+			img{
+				width: 100%;
+				margin: 0;
+				float: none;
+				margin-top: 16px;
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 end 								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+
+	#header{
+		.info-holder{
+			ul{
+				&.call-center-holder{ display: none; }
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end 								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
