--- a/assets/css/products.less
+++ b/assets/css/products.less
@@ -70,7 +70,7 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	product start		  					  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-#content-info-holder{
+#content{
 	&.product-holder{
 		.carousel-holder{
 			width: 50%;
@@ -117,4 +117,148 @@
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	product end		  						  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 start		  						  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 1024px){
+
+	#content{
+		&.product-holder{
+			#navigation-holder{ display: none; }
+			#content-info-holder{ margin-top: 20px; }
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 end		  						  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start		  						  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+
+	#content{
+		&.product-holder{
+			.carousel-holder{
+				width: 100%;
+				padding-bottom: 56.25%;
+				float: left;
+				border: 2px solid @grey;
+				figure{
+					width: 60%;
+					height: auto;
+					position: absolute;
+					top: 50%;
+					left: 20%;
+					transform: translateY(-50%);
+					overflow: hidden;
+				}
+			}
+			.info-holder{
+				width: 100%;
+				float: right;
+				overflow: hidden;
+				h1{
+					padding: 20px 0 0;
+					font-size: 1.5em;
+				}
+				.sprtr-h{
+					margin-left: 0;
+				}
+				p{
+					padding: 0 0 10px;
+					& > span{
+						font-weight: 500;
+					}
+					&.price{
+						padding: 20px 0;
+						color: @green;
+						font-weight: 500;
+						& > span{
+							color: @black;
+						}
+					}
+				}
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end		  						 	  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 start		  					 	  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 680px){
+
+	#content-info-holder{
+		.grid{
+			.col{
+				margin-bottom: 20px;
+				figure{
+					width: 100%;
+					height: auto;
+					background: @white;
+					margin: 0 auto;
+					border: 20px solid @grey;
+					border-bottom: none;
+					box-sizing: border-box;
+					img{
+						width: 80%;
+						height: auto;
+						margin: 0 auto;
+					}
+				}
+				h2{
+					font-size: 1.125em;
+					margin: 0;
+					padding: 20px 20px 0;
+				}
+				.description{
+					width: 100%;
+					padding: 0 20px;
+					margin-bottom: 20px;
+					box-sizing: border-box;
+					overflow: hidden;
+					p{
+						height: 54px;
+						line-height: 18px;
+					}
+				}
+				.price-weight-holder{
+					width: 100%;
+					padding: 0 20px;
+					box-sizing: border-box;
+					overflow: hidden;
+					span{
+						display: block;
+						width: 50%;
+						line-height: 40px;
+						float: left;
+						&.price{
+							text-align: right;
+							color: @green;
+							font-weight: 500;
+						}
+					}
+				}	
+				.btn-small{
+					margin-bottom: 20px;
+					a{
+						text-transform: none;
+					}
+				}
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 end		  						 	  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
