--- a/assets/css/lib/common.less
+++ b/assets/css/lib/common.less
@@ -744,3 +744,59 @@ a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	800 end 								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 start 								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 680px){
+
+	#header{
+		.info-holder{
+			ul{
+				&.call-center-holder,
+				&.phones-holder{ display: none; }
+			}
+			.sprtr-v{ display: none; }
+		}
+	}
+	
+	#content{
+		&.sticky{
+			padding-bottom: 80px;
+		}
+	}
+
+	#footer{
+		height: 80px;
+		.logo,
+		.developers{
+			display: none;
+		}
+		&.sticky{
+			margin-top: -80px;
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 end 								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	520 start 								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 520px){
+
+	#header{
+		.btn-large{
+			width: 180px;
+			a{
+				font-size: 1em;
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	520 end 								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
