private adaptation start

--- a/assets/css/auth.less
+++ b/assets/css/auth.less
@@ -42,3 +42,26 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	auth end							 	  				*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 start							 	  				*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 680px){
+	
+	.auth-holder{
+		width: 94.117648%;
+		position: absolute;
+		top: 20px;
+		left: 2.941176%;
+		transform: translateX(0%) translateY(0%);
+		form{
+			width: 90%;
+		}
+	}	
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	680 end							 	  				*/
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+
