--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -528,6 +528,14 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 @media only screen and (max-width: 520px){
 
+	.outer.project-holder{
+		.inner{
+			p{
+				padding: 0 20px 20px;
+			}
+		}
+	}
+
 	#watch-movie{
 		margin: 40px auto 60px;
 		span.text{
@@ -566,6 +574,13 @@
 
 	.outer.questions-holder{
 		h2{ padding: 0 20px; }
+		.questions{
+			li{
+				p{
+					padding: 0 20px;
+				}
+			}
+		}
 	}
 
 }
