--- a/assets/css/project.less
+++ b/assets/css/project.less
@@ -139,16 +139,7 @@
 
 	#content-info-holder{
 		.product-categories{
-			margin: 10px 0 20px;
-			li{
-				display: block;
-				width: 49%;
-				padding-top: 49%;
-				float: left;
-				margin: 0 0 10px 2%;
-				&:first-child{ margin-left: 0; }
-				&:nth-child(odd){ margin-left: 0; }
-			}
+			display: none;
 		}
 	}
 
