--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -63,7 +63,7 @@
 		float: left;
 		ul{
 			&.langs-holder{
-				display: block;
+				display: none;
 				margin: 0 0 0 10px;
 				& > li{
 					display: block;
@@ -167,8 +167,8 @@
 		p{ padding: 20px 20px; }
 	}
 	.outer.scrollable-holder{
-		padding: 70px 0 40px;
-		margin-top: -70px;
+		padding: 30px 0 40px;
+		margin-top: -30px;
 		box-sizing: border-box;
 		&.no-action-panel{
 			padding: 30px 0 0;
@@ -321,4 +321,26 @@
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	info holder end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 start												 */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 1024px){
+
+	#navigation-holder{
+		width: 240px;
+		padding: 0;
+		float: left;
+		ul{ border: none; }
+		border-right: 2px solid @grey;
+	}
+
+	#content-info-holder{
+		padding: 0;
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 end												 */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
