--- a/assets/css/lib/pagination.less
+++ b/assets/css/lib/pagination.less
@@ -46,6 +46,80 @@
 		}
 	}
 }
+#mobile-pagination-holder{
+	display: none;
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+	ul{
+		width: 200px;
+		height: auto;
+		margin: 0 auto;
+		overflow: hidden;
+	}
+	li{
+		display: block;
+		width: 60px;
+		height: 60px;
+		float: left;
+		overflow: hidden;
+		&:nth-child(2){
+			margin: 0 10px;
+		}
+		a,
+		span{
+			display: block;
+			width: 100%;
+			height: 100%;
+			line-height: 60px;
+			font-size: 1em;
+			text-align: center;
+			background: @grey;
+			overflow: hidden;
+		}
+		a{
+			background: @green;
+			color: @white;
+			&:before{
+				display: block;
+				margin-top: 22px;
+			}
+		}
+	}
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	pagination end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+
+	#pagination-holder{
+		width: 100%;
+		float: none;
+		overflow: hidden;
+		ul{
+			text-align: center;
+		}
+		li{
+			width: 60px;
+			height: 60px;
+			margin-right: 5px;
+			text-align: center;
+			&:last-child{ margin-right: 0; }
+			a{
+				line-height: 60px;
+				background: @grey;
+			}
+			.dot{
+				margin-top: 30px;
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end									  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
