--- a/assets/css/lib/personal-data.less
+++ b/assets/css/lib/personal-data.less
@@ -106,3 +106,84 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	personal data end					 	  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 1024px){
+
+	#content-info-holder{
+		.personal-data-holder{
+			h3{
+				padding: 40px 20px 20px;
+			}
+			.info-holder{
+				width: 100%;
+				padding: 0 20px 0;
+				.col{
+					width: 100%;
+					float: none;
+					padding-right: 0;
+					margin-bottom: 20px;
+					box-sizing: border-box;
+					&:nth-child(2){
+						padding-left: 0;
+						padding-right: 0;
+					}
+					p{
+						padding: 0;
+					}
+				}
+			}
+			.links-holder{
+				& > a{
+					display: block;
+					width: 100%;
+					padding: 0;
+					float: none;
+					text-align: left;
+				}
+				& > .btn-small{
+					display: block;
+					float: left;
+					margin: 20px 0 0;
+				}
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	1024 end								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+
+	#content-info-holder{
+		.personal-data-holder{
+			padding: 0;
+			.links-holder{
+				& > a{
+					display: block;
+					width: 100%;
+					padding: 0;
+					float: none;
+					text-align: left;
+				}
+				& > .btn-small{
+					display: block;
+					float: left;
+					margin: 20px 0 0;
+				}
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end									  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
