--- a/assets/css/stats.less
+++ b/assets/css/stats.less
@@ -27,3 +27,54 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	stats end							 	  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 start							 	  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+@media only screen and (max-width: 800px){
+
+	#content-info-holder{
+		.outer.scrollable-holder{
+			padding: 0;
+			margin: 0;
+			.scrollable{
+				padding: 0;
+				margin-bottom: 80px;
+			}
+		}
+		.action-panel-holder.top{
+			height: auto;
+			padding: 0;
+		}
+		.categories-panel-holder{
+			margin-bottom: 20px;
+			ul{
+				height: auto;
+			}
+			li{
+				display: block;
+				width: 100%;
+				white-space: default;
+				margin-left: 0;
+				&:first-child{ margin-left: 0; }
+				a{
+					height: 60px;
+					text-align: left;
+					line-height: 60px;
+				}
+			}			
+		}
+		.table-holder{
+			table{
+				th:nth-child(3),
+				td:nth-child(3){
+					display: none;
+				}
+			}
+		}
+	}
+
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	800 end								 	  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
