--- a/assets/css/project.less
+++ b/assets/css/project.less
@@ -95,9 +95,11 @@
 			margin: 40px auto;
 		}
 	}
+	.worksheet-holder{
+		margin: 0 0 40px;
+	}
 	.form-holder{
 		width: 100%;
-		margin-top: 20px;
 		overflow: hidden;
 		.field-area{
 			margin-bottom: 10px;
