--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -100,9 +100,8 @@
 		li{
 			display: block;
 			width: 32.22222222222222%;
-			padding-top: 32.22222222222222%;
+			height: auto;
 			float: left;
-			position: relative;
 			box-sizing: border-box;
 			overflow: hidden;
 			&:nth-child(2){
@@ -111,10 +110,8 @@
 			figure{
 				display: block;
 				width: 100%;
-				height: 100%;
-				position: absolute;
-				top: 0;
-				left: 0;
+				position: relative;
+				overflow: hidden;
 				&:after{
 					display: block;
 					width: 100%;
@@ -138,10 +135,6 @@
 			}
 			.inner{
 				width: 100%;
-				position: absolute;
-				top: 0;
-				left: 0;
-				z-index: 5;
 				.icon{
 					display: block;
 					width: 40px;
@@ -154,12 +147,8 @@
 					margin-top: 90px;
 				}
 				.sprtr-h{
-					margin: 140px auto 20px;
+					margin: 40px auto 20px;
 					background: @green;
-				}
-				p{
-					color: @white;
-					padding: 0 20px;
 				}
 			}
 		}
