--- a/assets/css/lib/forms.less
+++ b/assets/css/lib/forms.less
@@ -29,6 +29,14 @@ label{
 	font-family: "Ubuntu", sans-serif;
 	font-size: 1em;
 }
+.error-holder{
+	display: block;
+	font-size: .875em;
+	line-height: 30px;
+	color: @redDark;
+	text-align: left;
+	padding-left: 10px;
+}
 
 input[type=text],
 input[type=tel],
