--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -319,6 +319,9 @@
 		}
 	}
 }
+.empty{
+  	padding: 20px;
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	info holder end							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
