--- a/assets/css/lib/grid-private.less
+++ b/assets/css/lib/grid-private.less
@@ -9,14 +9,15 @@
 			margin-bottom: 20px;
 		}
 		.col{
-			width: 48.88888888888889%;
+			width: 48.872604284%;
 			background: @grey;
 			float: left;
 			position: relative;
 			box-sizing: border-box;
+		  	margin-right: 2.254791432%;
 			overflow: hidden;
 			&:last-child{
-				margin-left: 2.222222222222222%;
+			  margin-right: 0;
 			}
 			.inner{
 				.title-holder{
