--- a/assets/css/auth.less
+++ b/assets/css/auth.less
@@ -38,6 +38,23 @@
 		margin: 0 auto 50px;
 	}
 	.field-area{ margin-bottom: 20px; }
+	p.error{
+		color: @redDark;
+		padding: 10px 0;
+		text-align: left;
+		font-weight: normal;
+	}
+	.tip-holder{
+		width: 100%;
+		margin-bottom: 20px;
+		& > p{
+			color: darken(@grey, 40%);
+			text-align: left;
+			span{
+				color: @green;
+			}
+		}
+	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	auth end							 	  				*/
@@ -47,21 +64,20 @@
 /*	680 start							 	  				*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 @media only screen and (max-width: 680px){
-	
+
 	.auth-holder{
 		width: 94.117648%;
-		position: absolute;
-		top: 20px;
-		left: 2.941176%;
+		position: relative;
+		margin: 20px 0 0 2.941176%;
+		top: 0;
+		left: 0;
 		transform: translateX(0%) translateY(0%);
 		form{
 			width: 90%;
 		}
-	}	
+	}
 
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	680 end							 	  				*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-
