--- a/assets/css/kids.less
+++ b/assets/css/kids.less
@@ -7,6 +7,7 @@
 @import "lib/tables.less";
 @import "lib/forms.less";
 @import "lib/loader.less";
+@import "lib/liquidpay-widget.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	detailed start						 	  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
